objects/maps__SettingsGroup__c.object
<CustomObject>
    <fields>
        <fullName>maps__AllowExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AutoCheckOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Checkout Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ButtonSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Button Set</label>
        <referenceTo>maps__ButtonSet__c</referenceTo>
        <relationshipLabel>Maps Settings Groups</relationshipLabel>
        <relationshipName>Maps_Settings_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__CreateDataLayers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Data Layers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__DataRegion__c</fullName>
        <description>Select where off-platform compute resources reside</description>
        <label>Off-Platform Processing Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                    <default>true</default>
                    <label>North America</label>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DefaultMapTile__c</fullName>
        <description>This is the default map tile to be used when the map is loaded</description>
        <label>Default Map Tile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ESRI Street</fullName>
                    <default>true</default>
                    <label>ESRI Street</label>
                </value>
                <value>
                    <fullName>ESRI Topography</fullName>
                </value>
                <value>
                    <fullName>ESRI Imagery</fullName>
                </value>
                <value>
                    <fullName>Google Road</fullName>
                </value>
                <value>
                    <fullName>Google Satellite</fullName>
                </value>
                <value>
                    <fullName>Google Hybrid</fullName>
                </value>
                <value>
                    <fullName>Google Terrain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__DefaultValues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__Description__c</fullName>
        <description>Settings Group Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>maps__EditableTooltips__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Editable Tooltips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__EnableArcGIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable ArcGIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__FolderAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Folder Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__HidePersonalFolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Personal Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__LiveMobileTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live Mobile Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__MaxExportSize__c</fullName>
        <label>Max Export Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySizeExternal__c</fullName>
        <label>Max Query Size External Objs</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MaxQuerySize__c</fullName>
        <label>Max Query Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__MobileQuerySize__c</fullName>
        <label>Mobile Query Size</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__ObjectSearchLanguage__c</fullName>
        <description>Select the query language Maps will use when searching Salesforce records using the Maps search bar.</description>
        <label>Maps Object Search Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOQL</fullName>
                    <default>true</default>
                    <label>SOQL</label>
                </value>
                <value>
                    <fullName>SOSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Profile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Profile</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__ProxyUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proxy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__SelfHostedDataUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Self Hosted Data Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ShowUserFolders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show User Folders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ShowWeather__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Weather</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryLayerCreation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manage Territory Layer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Maps_Settings_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Maps Settings Group</label>
    <listViews>
        <fullName>maps__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Settings Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Settings Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>